# fact-check-multimodal

./: .gitignore  README.md  pyproject.toml  solution_multimodal.md  thoughts.md
src/: __init__.py
src/fact_check/: claims_aggregated.json  claims_report.md  claims_results.json  design_doc  evidence_aggregator.py  extract.py  fact-check-dashboard.html  pinecone_setup.py  process_all_pdfs.py  results_v5_aggregated.json  results_v6.json  segmentation_figure_extractor.py  test_claims_aggregated.json  test_claims_aggregated_fixed.json  test_claims_aggregated_v5.json  verify_claims.py
src/fact_check/old_results/: results-v2.json
src/fact_check/src/fact_check/: aggregated_multimodal_v1.json  fixed_aggregated_results.json  report.md  results-v3.json  results-v3_aggregated.json  results.json  results_multimodal_v1.json  results_multimodal_v1.md  results_multimodal_v2.json  results_multimodal_v2.md  results_v5.json  results_v6_aggregated.json
src/fact_check/src/fact_check/results/: results_1.json
src/fact_check/src/fact_check/test_files/: Arunachalam et al.txt
src/fact_check/test_clinical_files/: Arunachalam et al. (2021).md
